--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   ],
   "dependencies": {
     "chalk": "^4.1.2",
-    "meow": "^9.0.0"
+    "meow": "^9.0.0",
+    "update-notifier": "^5.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
