--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "jam3"
   ],
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "chalk": "^4.1.2",
+    "conf": "^10.0.3",
     "meow": "^9.0.0",
     "update-notifier": "^5.1.0"
   },
