--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@iarna/toml": "^2.2.5",
     "chalk": "^4.1.2",
     "conf": "^10.0.3",
+    "ipfs-core": "^0.12.0",
     "meow": "^9.0.0",
     "update-notifier": "^5.1.0"
   },
