--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@iarna/toml": "^2.2.5",
     "chalk": "^4.1.2",
     "conf": "^10.0.3",
+    "get-stdin": "^9.0.0",
     "ipfs-core": "^0.12.0",
     "meow": "^9.0.0",
     "update-notifier": "^5.1.0"
