--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-1",
   "description": "Lorem command-line tool",
   "license": "MIT",
-  "repository": "LoremLabs/lorem-cli",
+  "repository": "https://github.com/LoremLabs/lorem-computer-cli",
   "author": {
     "name": "Matt Mankins",
     "email": "mankins@gmail.com",
