--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "pretty": "prettier --check .",
-    "lint": "prettier --check . && eslint --ignore-path .gitignore .",
+    "pretty:fix": "prettier --write .",
+    "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "prettier --write . && eslint --fix --ignore-path .gitignore .",
     "release": "np",
     "test": "echo nyet && exit 0"
