--- a/package.json
+++ b/package.json
@@ -37,13 +37,18 @@
     "jam3"
   ],
   "dependencies": {
+    "@dnslink/js": "^0.12.0",
     "@iarna/toml": "^2.2.5",
     "chalk": "^4.1.2",
     "conf": "^10.0.3",
+    "dotenv": "^10.0.0",
     "get-stdin": "^9.0.0",
     "ipfs-core": "^0.12.0",
+    "ipfs-http-client": "^54.0.1",
     "meow": "^9.0.0",
-    "update-notifier": "^5.1.0"
+    "node-fetch": "^3.1.0",
+    "update-notifier": "^5.1.0",
+    "web3.storage": "^3.3.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
