--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "ipfs-http-client": "^54.0.1",
     "meow": "^9.0.0",
     "node-fetch": "^3.1.0",
+    "open": "^8.4.0",
+    "prompts": "^2.4.2",
     "update-notifier": "^5.1.0",
+    "uuid": "^8.3.2",
     "web3.storage": "^3.3.4"
   },
   "devDependencies": {
