--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lorem-computer",
-  "version": "0.0.1-5",
+  "version": "0.0.1-6",
   "description": "Lorem command-line tool",
   "license": "MIT",
   "repository": "https://github.com/LoremLabs/lorem-computer-cli",
@@ -24,8 +24,7 @@
     "release": "np",
     "test": "echo nyet && exit 0"
   },
-  "files": [
-  ],
+  "files": [],
   "keywords": [
     "cli",
     "cli-app",
